--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 org.lifia.collaborative-tool/target/server/node_modules
-org.lifia.collaborative-tool/target/collaborative-tool\node_modules
+org.lifia.collaborative-tool/target/collaborative-tool/node_modules
